force-app/main/default/objects/PgM_Roster__c/PgM_Roster__c.object-meta.xml
<CustomObject>
    <label>Roster</label>
    <nameField>
        <label>Full Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Roster</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>