force-app/main/default/objects/PgM_Roster__c/fields/PgM_Assignment_Number__c.field-meta.xml
<CustomField>
    <fullName>PgM_Assignment_Number__c</fullName>
    <label>Assignment Tracking #</label>
    <length>20</length>
    <type>Text</type>
</CustomField>