force-app/main/default/objects/PgM_Roster__c/fields/PgM_Company__c.field-meta.xml
<CustomField>
    <fullName>PgM_Company__c</fullName>
    <label>Company</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer Name</fullName>
                <default>true</default>
                <label>Customer Name</label>
            </value>
            <value>
                <fullName>Vendor A</fullName>
            </value>
            <value>
                <fullName>Vendor B</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>