force-app/main/default/objects/PgM_Roster__c/fields/PgM_DevOps_Status__c.field-meta.xml
<CustomField>
    <fullName>PgM_DevOps_Status__c</fullName>
    <label>DevOps Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Applicable</fullName>
                <default>true</default>
                <label>Not Applicable</label>
            </value>
            <value>
                <fullName>Requested</fullName>
            </value>
            <value>
                <fullName>Provisioned</fullName>
            </value>
            <value>
                <fullName>Tested</fullName>
                <label>Tested &amp; Validated</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>