force-app/main/default/objects/PgM_Roster__c/fields/PgM_First_Name__c.field-meta.xml
<CustomField>
    <fullName>PgM_First_Name__c</fullName>
    <label>First Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>