force-app/main/default/objects/PgM_Roster__c/fields/PgM_Laptop_Status__c.field-meta.xml
<CustomField>
    <fullName>PgM_Laptop_Status__c</fullName>
    <label>Laptop Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Required</fullName>
                <default>true</default>
                <label>Not Required</label>
            </value>
            <value>
                <fullName>Requested</fullName>
            </value>
            <value>
                <fullName>Shipped</fullName>
            </value>
            <value>
                <fullName>Received</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>