force-app/main/default/objects/PgM_Roster__c/fields/PgM_Last_Day__c.field-meta.xml
<CustomField>
    <fullName>PgM_Last_Day__c</fullName>
    <label>Last Day</label>
    <type>Date</type>
</CustomField>