force-app/main/default/objects/PgM_Roster__c/fields/PgM_Offboarding_Date__c.field-meta.xml
<CustomField>
    <fullName>PgM_Offboarding_Date__c</fullName>
    <label>Offboarding Complete Date</label>
    <type>Date</type>
</CustomField>