force-app/main/default/objects/PgM_Roster__c/fields/PgM_Offboarding_Status__c.field-meta.xml
<CustomField>
    <fullName>PgM_Offboarding_Status__c</fullName>
    <label>Offboarding Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Offboarding Email Sent</fullName>
            </value>
            <value>
                <fullName>Request Deactivation</fullName>
            </value>
            <value>
                <fullName>Deactivation in Progress</fullName>
            </value>
            <value>
                <fullName>Deactivated</fullName>
            </value>
            <value>
                <fullName>Offboarded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>