force-app/main/default/objects/PgM_Roster__c/fields/PgM_Onboarding_Comment__c.field-meta.xml
<CustomField>
    <fullName>PgM_Onboarding_Comment__c</fullName>
    <label>Onboarding Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>