force-app/main/default/objects/PgM_Roster__c/fields/PgM_Onboarding_Date__c.field-meta.xml
<CustomField>
    <fullName>PgM_Onboarding_Date__c</fullName>
    <label>Onboarding Complete Date</label>
    <type>Date</type>
</CustomField>