force-app/main/default/objects/PgM_Roster__c/fields/PgM_Onboarding_Status__c.field-meta.xml
<CustomField>
    <fullName>PgM_Onboarding_Status__c</fullName>
    <label>Onboarding Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Required</fullName>
            </value>
            <value>
                <fullName>Not Started</fullName>
                <default>true</default>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>Welcome Email Sent</fullName>
            </value>
            <value>
                <fullName>Awaiting VPN Creation</fullName>
            </value>
            <value>
                <fullName>Onboarding Email Sent</fullName>
            </value>
            <value>
                <fullName>Awaiting VPN Verification</fullName>
            </value>
            <value>
                <fullName>Onboarding Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>