force-app/main/default/objects/PgM_Roster__c/fields/PgM_Primary_Email__c.field-meta.xml
<CustomField>
    <fullName>PgM_Primary_Email__c</fullName>
    <externalId>true</externalId>
    <label>Primary Email</label>
    <type>Email</type>
</CustomField>