force-app/main/default/objects/PgM_Roster__c/fields/PgM_Primary_Role__c.field-meta.xml
<CustomField>
    <fullName>PgM_Primary_Role__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Role</label>
    <referenceTo>PgM_Role__c</referenceTo>
    <relationshipLabel>Roster</relationshipLabel>
    <relationshipName>Roster</relationshipName>
    <type>Lookup</type>
</CustomField>