force-app/main/default/objects/PgM_Roster__c/fields/PgM_Repository_Status__c.field-meta.xml
<CustomField>
    <fullName>PgM_Repository_Status__c</fullName>
    <label>Repository Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Requested</fullName>
                <default>true</default>
                <label>Requested</label>
            </value>
            <value>
                <fullName>Provisioned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>