force-app/main/default/objects/PgM_Roster__c/fields/PgM_Secondary_Email__c.field-meta.xml
<CustomField>
    <fullName>PgM_Secondary_Email__c</fullName>
    <label>Secondary Email</label>
    <type>Email</type>
</CustomField>