force-app/main/default/objects/PgM_Roster__c/fields/PgM_Staffing_Source__c.field-meta.xml
<CustomField>
    <fullName>PgM_Staffing_Source__c</fullName>
    <label>Staffing Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>Vendor A</fullName>
            </value>
            <value>
                <fullName>Vendor B</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>