force-app/main/default/objects/PgM_Roster__c/fields/PgM_Sub_Contractor__c.field-meta.xml
<CustomField>
    <fullName>PgM_Sub_Contractor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sub-Contractor</label>
    <type>Checkbox</type>
</CustomField>