force-app/main/default/objects/PgM_Roster__c/fields/PgM_Title__c.field-meta.xml
<CustomField>
    <fullName>PgM_Title__c</fullName>
    <label>Title</label>
    <length>80</length>
    <type>Text</type>
</CustomField>