force-app/main/default/objects/PgM_Roster__c/fields/PgM_Unique_Count__c.field-meta.xml
<CustomField>
    <fullName>PgM_Unique_Count__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unique Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>