force-app/main/default/objects/PgM_Roster__c/fields/PgM_User__c.field-meta.xml
<CustomField>
    <fullName>PgM_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Roster</relationshipName>
    <type>Lookup</type>
</CustomField>