force-app/main/default/objects/PgM_Roster__c/fields/PgM_Workstream__c.field-meta.xml
<CustomField>
    <fullName>PgM_Workstream__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Workstream</label>
    <referenceTo>PgM_Workstream__c</referenceTo>
    <relationshipLabel>Roster</relationshipLabel>
    <relationshipName>Roster</relationshipName>
    <type>Lookup</type>
</CustomField>