force-app/main/default/objects/PgM_Roster__c/recordTypes/Team_Member.recordType-meta.xml
<RecordType>
    <fullName>Team_Member</fullName>
    <active>true</active>
    <description>Program team members that do not require onboarding tracking.</description>
    <label>Team Member</label>
</RecordType>