force-app/main/default/objects/PgM_Roster__c/recordTypes/Team_Member_Onboarding.recordType-meta.xml
<RecordType>
    <fullName>Team_Member_Onboarding</fullName>
    <active>true</active>
    <description>Program team members that require onboarding.</description>
    <label>Team Member + Onboarding</label>
</RecordType>