force-app/main/default/objects/PgM_Roster__c/validationRules/Apple_ID_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Apple_ID_Required</fullName>
    <active>true</active>
    <description>Requires the Apple ID field is updated when the Apple Status is set to Provisioned.</description>
    <errorConditionFormula>ISBLANK( PgM_Secondary_Email__c ) &amp;&amp;  ISPICKVAL( PgM_VPN_Status__c , &quot;AppleConnect Provisioned&quot;) &amp;&amp;  PgM_Active__c = true</errorConditionFormula>
    <errorDisplayField>PgM_Secondary_Email__c</errorDisplayField>
    <errorMessage>Apple email is required.</errorMessage>
</ValidationRule>