force-app/main/default/objects/PgM_Roster__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>PgM_First_Name__c</columns>
    <columns>PgM_Last_Name__c</columns>
    <columns>PgM_Company__c</columns>
    <columns>PgM_Primary_Role__c</columns>
    <columns>PgM_Primary_Email__c</columns>
    <columns>PgM_Workstream__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>